--- a/Portfolio_Website/Portfolio.html
+++ b/Portfolio_Website/Portfolio.html
@@ -3,37 +3,34 @@
     <head>
         <title>Tyler Paulson's Portfolio</title>
     </head>
+    <link href="./portfolio_style.css" rel="stylesheet"/>
     <body>
         <div>
-            <h1>Tyler Paulson</h1>
-        </div>
-        <div>
-            <h3>Introduction</h3>
-        </div>
-        <div>
-            <h3>About Me</h3>
+            <h1 class="name">Tyler Paulson</h1>
+            <h3 class="intro">Introduction</h3>
+            <h3 class="about">About Me</h3>
             <p></p>
         </div>
         <div>
-            <h3>Skills</h3>
-            <p></p>
-        </div>
-        <div>
-            <h3>Projects</h3>
-            <p></p>
-        </div>
-        <div>
-            <h3>Experience</h3>
-            <p></p>
-        </div>
-        <div>
-            <h3>Education</h3>
-            <p></p>
-        </div>
-        <div>
-            <h3>Connect</h3>
-            <p><a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a></p>
-            <p><a href="https://github.com/Tpaulson7" target="_blank">GitHub</a></p>
+            <div id="skills">
+                <h3 class="section-title">Skills</h3>
+                <p></p>
+            </div>
+            <div id="projects">
+                <h3 class="section-title">Projects</h3>
+                <p></p>
+            </div id="experience">
+                <h3 class="section-title">Experience</h3>
+                <p></p>
+            <div id="education">
+                <h3 class="section-title">Education</h3>
+                <p></p>
+            </div>
+            <div id="connect">
+                <h3 class="">Connect</h3>
+                <p><a href="https://www.linkedin.com/in/tpaulson7" target="_blank">LinkedIn</a></p>
+                <p><a href="https://github.com/Tpaulson7" target="_blank">GitHub</a></p>
+            </div>
         </div>
     </body>
 </html>
