--- a/Portfolio_Website/Portfolio.html
+++ b/Portfolio_Website/Portfolio.html
@@ -1,36 +1,73 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Tyler Paulson's Portfolio</title>
-    </head>
-    <link href="./portfolio_style.css" rel="stylesheet"/>
-    <body>
-        <div>
-            <h1 class="name">Tyler Paulson</h1>
-            <h3 class="intro">Introduction</h3>
-            <h3 class="about">About Me</h3>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tyler Pauslon</title>
+    <link rel="stylesheet" href="portfolio_style.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <header>
+        <h1>Tyler Paulson | Web Dev Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#intro">Introduction</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="intro">
+            <h2>Introduction</h2>
+            <p>Welcome to my portfolio! I am a passionate and motivated individual with a strong interest in web development and programming. While I may not have formal work experience in the tech industry, I am eager to apply my skills, knowledge, and enthusiasm to make a positive impact in the field.</p>
+            <p>Throughout my academic journey, I have actively pursued opportunities to learn and grow in the realm of programming. I have completed several coding courses and projects, honing my skills in HTML, CSS, JavaScript, and Python. I am particularly fascinated by backend development and enjoy the challenge of solving complex problems through code.</p>
+            <p>As I embark on my career in tech, I am committed to continuous learning and professional development. I am open to new challenges and excited to collaborate with like-minded individuals to create innovative solutions that make a difference.</p>
+        </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I embarked on my programming journey through the captivating world of data analysis. Although I initially delved into creating visualizations using tools like Tableau and Matplotlib, I soon realized that my true passion lay elsewhere. Eager to explore new avenues in programming, I set my sights on web development.</p>
+            <p>Since discovering web development, I've found myself utterly enamored with the boundless possibilities it offers. I am particularly enthusiastic about backend development, where I thrive on crafting robust server-side solutions. My curiosity knows no bounds as I eagerly delve into various server-side programming languages and frameworks, continually seeking to broaden my skill set.</p>
+            <p>At present, I am fully immersed in the realm of backend technologies, dedicating myself to mastering the art of building scalable and efficient solutions. I find immense satisfaction in architecting systems that not only meet but exceed expectations, delivering impactful results.</p>
+            <p>I am genuinely excited about the prospect of continuing my learning journey and making meaningful contributions to projects that shape the future of the tech industry. Join me as I embark on this exhilarating adventure, fueled by curiosity, passion, and an unwavering commitment to excellence.</p>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>Git</li>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li>Project 1: Portfolio Website (this website)</li>
+                <li>Project 2: </li>
+                <li>Project 3: </li>
+            </ul>
+        </section>
+        <section id="experience">
+            <h2>Experience</h2>
             <p></p>
-        </div>
-        <div>
-            <div id="skills">
-                <h3 class="section-title">Skills</h3>
-                <p></p>
-            </div>
-            <div id="projects">
-                <h3 class="section-title">Projects</h3>
-                <p></p>
-            </div id="experience">
-                <h3 class="section-title">Experience</h3>
-                <p></p>
-            <div id="education">
-                <h3 class="section-title">Education</h3>
-                <p></p>
-            </div>
-            <div id="connect">
-                <h3 class="">Connect</h3>
-                <p><a href="https://www.linkedin.com/in/tpaulson7" target="_blank">LinkedIn</a></p>
-                <p><a href="https://github.com/Tpaulson7" target="_blank">GitHub</a></p>
-            </div>
-        </div>
-    </body>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+            <p><strong>Trabuco Hills High School</strong><br>
+            Graduated: 2017</p>
+        </section>
+    </main>
+    <footer>
+        <p>Contact me: Tyler.Paulson7@gmail.com | 
+            <a href="https://www.linkedin.com/in/tpaulson7" target="_blank">LinkedIn</a> | 
+            <a href="https://github.com/Tpaulson7" target="_blank">GitHub</a>
+        </p>
+    </footer>
+</body>
 </html>
