--- a/Portfolio_Website/Portfolio.html
+++ b/Portfolio_Website/Portfolio.html
@@ -23,44 +23,56 @@
     </header>
     <main>
         <section id="intro">
+            <div class="container">
             <h2>Introduction</h2>
-            <p>Welcome to my portfolio! I am a passionate and motivated individual with a strong interest in web development and programming. While I may not have formal work experience in the tech industry, I am eager to apply my skills, knowledge, and enthusiasm to make a positive impact in the field.</p>
-            <p>Throughout my academic journey, I have actively pursued opportunities to learn and grow in the realm of programming. I have completed several coding courses and projects, honing my skills in HTML, CSS, JavaScript, and Python. I am particularly fascinated by backend development and enjoy the challenge of solving complex problems through code.</p>
-            <p>As I embark on my career in tech, I am committed to continuous learning and professional development. I am open to new challenges and excited to collaborate with like-minded individuals to create innovative solutions that make a difference.</p>
+                <p>Welcome to my portfolio! I am a passionate and motivated individual with a strong interest in web development and programming. While I may not have formal work experience in the tech industry, I am eager to apply my skills, knowledge, and enthusiasm to make a positive impact in the field.</p>
+                <p>Throughout my academic journey, I have actively pursued opportunities to learn and grow in the realm of programming. I have completed several coding courses and projects, honing my skills in HTML, CSS, JavaScript, and Python. I am particularly fascinated by backend development and enjoy the challenge of solving complex problems through code.</p>
+                <p>As I embark on my career in tech, I am committed to continuous learning and professional development. I am open to new challenges and excited to collaborate with like-minded individuals to create innovative solutions that make a difference.</p>
+            </div>
         </section>
         <section id="about">
+            <div class="container">
             <h2>About Me</h2>
-            <p>I embarked on my programming journey through the captivating world of data analysis. Although I initially delved into creating visualizations using tools like Tableau and Matplotlib, I soon realized that my true passion lay elsewhere. Eager to explore new avenues in programming, I set my sights on web development.</p>
-            <p>Since discovering web development, I've found myself utterly enamored with the boundless possibilities it offers. I am particularly enthusiastic about backend development, where I thrive on crafting robust server-side solutions. My curiosity knows no bounds as I eagerly delve into various server-side programming languages and frameworks, continually seeking to broaden my skill set.</p>
-            <p>At present, I am fully immersed in the realm of backend technologies, dedicating myself to mastering the art of building scalable and efficient solutions. I find immense satisfaction in architecting systems that not only meet but exceed expectations, delivering impactful results.</p>
-            <p>I am genuinely excited about the prospect of continuing my learning journey and making meaningful contributions to projects that shape the future of the tech industry. Join me as I embark on this exhilarating adventure, fueled by curiosity, passion, and an unwavering commitment to excellence.</p>
+                <p>I embarked on my programming journey through the captivating world of data analysis. Although I initially delved into creating visualizations using tools like Tableau and Matplotlib, I soon realized that my true passion lay elsewhere. Eager to explore new avenues in programming, I set my sights on web development.</p>
+                <p>Since discovering web development, I've found myself utterly enamored with the boundless possibilities it offers. I am particularly enthusiastic about backend development, where I thrive on crafting robust server-side solutions. My curiosity knows no bounds as I eagerly delve into various server-side programming languages and frameworks, continually seeking to broaden my skill set.</p>
+                <p>At present, I am fully immersed in the realm of backend technologies, dedicating myself to mastering the art of building scalable and efficient solutions. I find immense satisfaction in architecting systems that not only meet but exceed expectations, delivering impactful results.</p>
+                <p>I am genuinely excited about the prospect of continuing my learning journey and making meaningful contributions to projects that shape the future of the tech industry. Join me as I embark on this exhilarating adventure, fueled by curiosity, passion, and an unwavering commitment to excellence.</p>
+            </div>
         </section>
         <section id="skills">
+            <div class="container">
             <h2>Skills</h2>
-            <ul>
-                <li>Python</li>
-                <li>JavaScript</li>
-                <li>Git</li>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul>
+                <ul>
+                    <li>Python</li>
+                    <li>JavaScript</li>
+                    <li>Git</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
         </section>
         <section id="projects">
+            <div class="container">
             <h2>Projects</h2>
-            <ul>
-                <li>Project 1: Portfolio Website (this website)</li>
-                <li>Project 2: </li>
-                <li>Project 3: </li>
-            </ul>
+                <ul>
+                    <li>Project 1: Portfolio Website (this website)</li>
+                    <li>Project 2: </li>
+                    <li>Project 3: </li>
+                </ul>
+            </div>
         </section>
         <section id="experience">
+            <div class="container">    
             <h2>Experience</h2>
-            <p></p>
+                <p></p>
+            </div>
         </section>
         <section id="education">
+            <div class="container">
             <h2>Education</h2>
-            <p><strong>Trabuco Hills High School</strong><br>
-            Graduated: 2017</p>
+                <p><strong>Trabuco Hills High School</strong><br>
+                    Graduated: 2017</p>
+            </div>
         </section>
     </main>
     <footer>
