Added HTML file links to new webpages and changed CSS for buttons

--- a/Portfolio_Website/Portfolio.html
+++ b/Portfolio_Website/Portfolio.html
@@ -12,12 +12,10 @@
         <h1>Tyler Paulson | Web Dev Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="#intro">Introduction</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#education">Education</a></li>
+                <button><li><a href="Portfolio.html">Home</a></li></button>
+                <button><li><a href="about.html">About Me</a></li></button>
+                <button><li><a href="projects.html">Projects</a></li></button>
+                <button><li><a href="experience.html">Experience</a></li></button>
             </ul>
         </nav>
     </header>
@@ -26,7 +24,7 @@
             <div class="container">
             <h2>Introduction</h2>
                 <p>Welcome to my portfolio! I am a passionate and motivated individual with a strong interest in web development and programming. While I may not have formal work experience in the tech industry, I am eager to apply my skills, knowledge, and enthusiasm to make a positive impact in the field.</p>
-                <p>Throughout my academic journey, I have actively pursued opportunities to learn and grow in the realm of programming. I have completed several coding courses and projects, honing my skills in HTML, CSS, JavaScript, and Python. I am particularly fascinated by backend development and enjoy the challenge of solving complex problems through code.</p>
+                <p>Throughout my learning journey, I have actively pursued opportunities to learn and grow in the realm of programming. I have completed several coding courses and projects, honing my skills in HTML, CSS, JavaScript, and Python. I am particularly fascinated by backend development and enjoy the challenge of solving complex problems through code.</p>
                 <p>As I embark on my career in tech, I am committed to continuous learning and professional development. I am open to new challenges and excited to collaborate with like-minded individuals to create innovative solutions that make a difference.</p>
             </div>
         </section>
