--- a/Portfolio_Website/projects.html
+++ b/Portfolio_Website/projects.html
@@ -10,10 +10,10 @@
     <h1>Tyler Paulson | Web Dev Portfolio</h1>
     <nav>
         <ul>
-            <button><li><a href="Portfolio.html">Home</a></li></button>
-            <button><li><a href="about.html">About Me</a></li></button>
-            <button><li><a href="projects.html">Projects</a></li></button>
-            <button><li><a href="experience.html">Experience</a></li></button>
+            <a href="Portfolio.html"><button><li>Home</li></button></a>
+            <a href="about.html"><button><li>About Me</li></button></a>
+            <a href="projects.html"><button><li>Projects</li></button></a>
+            <a href="experience.html"><button><li>Experience</li></button></a>
         </ul>
     </nav>
 </header>
