--- a/Portfolio_Website/Portfolio.html
+++ b/Portfolio_Website/Portfolio.html
@@ -12,10 +12,10 @@
         <h1>Tyler Paulson | Web Dev Portfolio</h1>
         <nav>
             <ul>
-                <a href="Portfolio.html"><button><li>Home</li></button></a>
-                <a href="about.html"><button><li>About Me</li></button></a>
-                <a href="projects.html"><button><li>Projects</li></button></a>
-                <a href="experience.html"><button><li>Experience</li></button></a>
+                <a href="#experience"><button><li>Experience</li></button></a>
+                <a href="#projects"><button><li>Projects</li></button></a>
+                <a href="#skills"><button><li>Skills</li></button></a>
+                <a href="#about"><button><li>About</li></button></a>
             </ul>
         </nav>
     </header>
@@ -41,11 +41,11 @@
             <div class="container">
             <h2>Skills</h2>
                 <ul>
-                    <li>Python</li>
                     <li>JavaScript</li>
-                    <li>Git</li>
+                    <li>Python</li>
                     <li>HTML</li>
                     <li>CSS</li>
+                    <li>Git</li>
                 </ul>
             </div>
         </section>
@@ -53,7 +53,7 @@
             <div class="container">
             <h2>Projects</h2>
                 <ul>
-                    <li>Project 1: Portfolio Website (this website)</li>
+                    <li>Project 1: Portfolio Website</li>
                     <li>Project 2: </li>
                     <li>Project 3: </li>
                 </ul>
