--- a/Portfolio_Website/Portfolio.html
+++ b/Portfolio_Website/Portfolio.html
@@ -12,6 +12,7 @@
         <h1>Tyler Paulson | Web Dev Portfolio</h1>
         <nav>
             <ul>
+                <a href="#education"><button><li>Education</li></button></a>
                 <a href="#experience"><button><li>Experience</li></button></a>
                 <a href="#projects"><button><li>Projects</li></button></a>
                 <a href="#skills"><button><li>Skills</li></button></a>
@@ -33,7 +34,6 @@
             <h2>About Me</h2>
                 <p>I embarked on my programming journey through the captivating world of data analysis. Although I initially delved into creating visualizations using tools like Tableau and Matplotlib, I soon realized that my true passion lay elsewhere. Eager to explore new avenues in programming, I set my sights on web development.</p>
                 <p>Since discovering web development, I've found myself utterly enamored with the boundless possibilities it offers. I am particularly enthusiastic about backend development, where I thrive on crafting robust server-side solutions. My curiosity knows no bounds as I eagerly delve into various server-side programming languages and frameworks, continually seeking to broaden my skill set.</p>
-                <p>At present, I am fully immersed in the realm of backend technologies, dedicating myself to mastering the art of building scalable and efficient solutions. I find immense satisfaction in architecting systems that not only meet but exceed expectations, delivering impactful results.</p>
                 <p>I am genuinely excited about the prospect of continuing my learning journey and making meaningful contributions to projects that shape the future of the tech industry. Join me as I embark on this exhilarating adventure, fueled by curiosity, passion, and an unwavering commitment to excellence.</p>
             </div>
         </section>
@@ -68,6 +68,7 @@
         <section id="education">
             <div class="container">
             <h2>Education</h2>
+                <p>I'm a self taught developer</p>
                 <p><strong>Trabuco Hills High School</strong><br>
                     Graduated: 2017</p>
             </div>
