fixed logic from if statements to switch

--- a/Rock_Paper_Scissors/main.html
+++ b/Rock_Paper_Scissors/main.html
@@ -16,6 +16,7 @@
     
     <div id="playerDisplay">PLAYER: </div>
     <div id="computerDisplay">COMPUTER: </div>
+    <div id="resultDisplay">RESULT: </div>
 
     <script src="script.js"></script>
 </body>
