added reset game function

--- a/Rock_Paper_Scissors/main.html
+++ b/Rock_Paper_Scissors/main.html
@@ -21,6 +21,10 @@
         <div id="counterDisplay">PLAYER: 0</div>
         <div id="lossDisplay">COMPUTER: 0</div>
 
+        <div id="resetGame">
+            <button onclick="resetGame()">Reset Scores</button>
+        </div>
+
         <script src="script.js"></script>
     </body>
 </html>
