--- a/Rock_Paper_Scissors/main.html
+++ b/Rock_Paper_Scissors/main.html
@@ -18,6 +18,8 @@
         <div id="computerDisplay">COMPUTER: </div>
         <div id="resultDisplay"></div>
 
+        <div id="score">SCORE</div>
+
         <div id="counterDisplay">PLAYER: 0</div>
         <div id="lossDisplay">COMPUTER: 0</div>
 
